@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.4-03
-Date: 2011-2-15
+Version: 1.4-04
+Date: 2011-2-23
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <suyusung@tsinghua.edu.cn>,
